ecmascript/parser/tests/test262-error-references/fail/4c7ea6a86bafaf0f.js.stderr
error: Expected ,, got .
 --> $DIR/tests/test262-parser/fail/4c7ea6a86bafaf0f.js:1:17
  |
1 | (function ({e: a.b}) {})
  |                 ^

